# badger2040

./: .gitignore  Cargo.toml  README.md
.cargo/: config.toml
examples/: KouvostoTelecom.tga  anim.rs  blank.rs  blank_black.rs  boundingbox.rs  centered.rs  dist.rs  dist_id.rs  fastblink.rs  fonts.rs  hasanen_id.rs  image.rs  screensaver.rs  ultrafast_text.rs  ultrafast_text_partial.rs  zokol_id.rs
gfx/: dist.tga  dist_cubefade.tga  dist_portrait.tga  dist_portrait2.tga
src/: bsp.rs  graphics_extensions.rs  lib.rs  main.rs
